# backend/internal/module/payment/handler/payment.go
@@ -62,6 +62,11 @@ func (p *PaymentHandler) GetDashboardV1Payments(w http.ResponseWriter, r *http.R
 		dateTo = &params.DateTo.Time
 	}
 
+	var minimumAmount *int
+	if params.MinAmount != nil {
+		minimumAmount = params.MinAmount
+	}
+
 	var page, limit int
 	if params.Page != nil {
 		page = *params.Page
@@ -70,7 +75,7 @@ func (p *PaymentHandler) GetDashboardV1Payments(w http.ResponseWriter, r *http.R
 		limit = *params.Limit
 	}
 
-	payments, total, page, limit, err := p.paymentUC.GetListPayments(status, search, dateFrom, dateTo, page, limit, sort)
+	payments, total, page, limit, err := p.paymentUC.GetListPayments(status, search, dateFrom, dateTo, minimumAmount, page, limit, sort)
 	if err != nil {
 		transport.WriteError(w, err)
 		return
